--- a/Documentation/releasenotes.txt
+++ b/Documentation/releasenotes.txt
@@ -1,5 +1,13 @@
 ﻿MODULE: DotNetNuke Announcements Module
 
+Version: 07.02.01
+Minimum Required DNN Version: 8.0.0
+
+* Tested for Dnn 9.2.1 compatibility
+* Templates are now serializable to support redis cache
+
+------------------------------------
+
 Version: 07.02.00
 Minimum Required DNN Version: 8.0.0
 
